crates/macros/src/snapshots/caesura_macros__tests__expand_shared_options.snap
---
source: crates/macros/src/tests.rs
expression: expand_options_from_file(source)
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct SharedOptionsPartial {
    /// Announce URL including passkey
    ///
    /// Examples: `https://flacsfor.me/a1b2c3d4e5f6/announce`, `https://home.opsfet.ch/a1b2c3d4e5f6/announce`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub announce_url: Option<String>,
    /// API key with torrent permissions for the indexer.
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub api_key: Option<String>,
    /// ID of the tracker as it appears in the source field of a torrent.
    ///
    /// Examples: `red`, `pth`, `ops`
    ///
    /// Default: `from announce_url`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub indexer: Option<String>,
    /// URL of the indexer.
    ///
    /// Examples: `https://redacted.sh`, `https://orpheus.network`
    ///
    /// Default: `from announce_url`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub indexer_url: Option<String>,
    /// Directories containing torrent content.
    ///
    /// Typically this is set as the download directory in your torrent client.
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub content: Option<Vec<PathBuf>>,
    /// Level of logs to display.
    #[arg(long, value_enum)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub verbosity: Option<Verbosity>,
    /// Time format to use in logs.
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub log_time: Option<TimeFormat>,
    /// Directory where transcodes and spectrograms will be written.
    ///
    /// Default: ``~/.local/share/caesura/output/` or platform equivalent`
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub output: Option<PathBuf>,
}
impl SharedOptionsPartial {
    fn resolve_internal(
        mut self,
        validate: bool,
    ) -> ::std::result::Result<
        SharedOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        let mut validator = ::caesura_options::OptionsValidator::new();
        let defaults = self.clone();
        let announce_url = self.announce_url;
        let api_key = self.api_key;
        let indexer = self.indexer.or_else(|| default_indexer(&defaults));
        let indexer_url = self.indexer_url.or_else(|| default_indexer_url(&defaults));
        let content = self.content.or_else(|| default_content(&defaults));
        let verbosity = self.verbosity;
        let log_time = self.log_time;
        let output = self.output.or_else(|| default_output(&defaults));
        if validate {
            validator.check_set("announce_url", &announce_url);
        }
        if validate {
            validator.check_set("api_key", &api_key);
        }
        if validate {
            validator.check_set("indexer", &indexer);
        }
        if validate {
            validator.check_set("indexer_url", &indexer_url);
        }
        if validate {
            validator.check_set("content", &content);
        }
        let resolved = SharedOptions {
            announce_url: announce_url.unwrap_or_default(),
            api_key: api_key.unwrap_or_default(),
            indexer: indexer.unwrap_or_default(),
            indexer_url: indexer_url.unwrap_or_default(),
            content: content.unwrap_or_default(),
            verbosity: verbosity.unwrap_or_default(),
            log_time: log_time.unwrap_or_default(),
            output: output.unwrap_or_default(),
        };
        if validate {
            resolved.validate(&mut validator);
        }
        let issues = validator.into_issues();
        if issues.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(issues)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for SharedOptionsPartial {
    type Resolved = SharedOptions;
    fn merge(&mut self, other: Self) {
        if self.announce_url.is_none() {
            self.announce_url = other.announce_url;
        }
        if self.api_key.is_none() {
            self.api_key = other.api_key;
        }
        if self.indexer.is_none() {
            self.indexer = other.indexer;
        }
        if self.indexer_url.is_none() {
            self.indexer_url = other.indexer_url;
        }
        if self.content.is_none() {
            self.content = other.content;
        }
        if self.verbosity.is_none() {
            self.verbosity = other.verbosity;
        }
        if self.log_time.is_none() {
            self.log_time = other.log_time;
        }
        if self.output.is_none() {
            self.output = other.output;
        }
    }
    fn resolve_without_validation(self) -> SharedOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        SharedOptions,
        ::std::vec::Vec<::caesura_options::OptionIssue>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for SharedOptions {
    fn default() -> Self {
        Self {
            announce_url: ::std::default::Default::default(),
            api_key: ::std::default::Default::default(),
            indexer: ::std::default::Default::default(),
            indexer_url: ::std::default::Default::default(),
            content: ::std::default::Default::default(),
            verbosity: ::std::default::Default::default(),
            log_time: ::std::default::Default::default(),
            output: ::std::default::Default::default(),
        }
    }
}
impl ::caesura_options::Documented for SharedOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "SharedOptions",
            description: "Options shared by all commands",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "announce_url", cli_flag :
                "--announce-url", field_type : "String", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < String >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description :
                "Announce URL including passkey<br>Examples: `https://flacsfor.me/a1b2c3d4e5f6/announce`, `https://home.opsfet.ch/a1b2c3d4e5f6/announce`",
                }, ::caesura_options::FieldDoc { config_key : "api_key", cli_flag :
                "--api-key", field_type : "String", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < String >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description : "API key with torrent permissions for the indexer.", },
                ::caesura_options::FieldDoc { config_key : "indexer", cli_flag :
                "--indexer", field_type : "String", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < String >
                ::default()).unwrap()), default_doc :
                ::std::option::Option::Some("from announce_url"), description :
                "ID of the tracker as it appears in the source field of a torrent.<br>Examples: `red`, `pth`, `ops`",
                }, ::caesura_options::FieldDoc { config_key : "indexer_url", cli_flag :
                "--indexer-url", field_type : "String", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < String >
                ::default()).unwrap()), default_doc :
                ::std::option::Option::Some("from announce_url"), description :
                "URL of the indexer.<br>Examples: `https://redacted.sh`, `https://orpheus.network`",
                }, ::caesura_options::FieldDoc { config_key : "content", cli_flag :
                "--content", field_type : "Vec<PathBuf>", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < Vec < PathBuf > >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description :
                "Directories containing torrent content.<br>Typically this is set as the download directory in your torrent client.",
                }, ::caesura_options::FieldDoc { config_key : "verbosity", cli_flag :
                "--verbosity", field_type : "Verbosity", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < Verbosity >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description : "Level of logs to display.", }, ::caesura_options::FieldDoc
                { config_key : "log_time", cli_flag : "--log-time", field_type :
                "TimeFormat", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < TimeFormat >
                ::default()).unwrap()), default_doc : ::std::option::Option::None,
                description : "Time format to use in logs.", },
                ::caesura_options::FieldDoc { config_key : "output", cli_flag :
                "--output", field_type : "PathBuf", default_value :
                ::std::option::Option::Some(::serde_json::to_string(& < PathBuf >
                ::default()).unwrap()), default_doc :
                ::std::option::Option::Some("`~/.local/share/caesura/output/` or platform equivalent"),
                description :
                "Directory where transcodes and spectrograms will be written.", }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<SharedOptionsPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < SharedOptions as
        ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
