crates/macros/src/snapshots/caesura_macros__tests__expand_torrent_injection_options.snap
---
source: crates/macros/src/tests.rs
expression: expand_options_from_file(source)
---
/// Partial options struct with optional fields for CLI/YAML parsing.
#[derive(
    ::clap::Args,
    ::std::clone::Clone,
    ::std::fmt::Debug,
    ::std::default::Default,
    ::serde::Deserialize,
    ::serde::Serialize
)]
pub struct TorrentInjectionOptionsPartial {
    /// Directory the torrent file is copied to.
    ///
    /// This should be set if you wish to auto-add to your torrent client.
    #[arg(long)]
    #[serde(default, skip_serializing_if = "::std::option::Option::is_none")]
    pub copy_torrent_to: Option<PathBuf>,
}
impl TorrentInjectionOptionsPartial {
    fn resolve_internal(
        self,
        validate: bool,
    ) -> ::std::result::Result<
        TorrentInjectionOptions,
        ::std::vec::Vec<::caesura_options::OptionRule>,
    > {
        let mut errors = ::std::vec::Vec::new();
        let copy_torrent_to = self.copy_torrent_to;
        let resolved = TorrentInjectionOptions {
            copy_torrent_to,
        };
        if validate {
            resolved.validate(&mut errors);
        }
        if errors.is_empty() {
            ::std::result::Result::Ok(resolved)
        } else {
            ::std::result::Result::Err(errors)
        }
    }
}
impl ::caesura_options::OptionsPartialContract for TorrentInjectionOptionsPartial {
    type Resolved = TorrentInjectionOptions;
    fn merge(&mut self, other: Self) {
        if self.copy_torrent_to.is_none() {
            self.copy_torrent_to = other.copy_torrent_to;
        }
    }
    fn resolve_without_validation(self) -> TorrentInjectionOptions {
        self.resolve_internal(false).expect("validation disabled")
    }
    fn resolve(
        self,
    ) -> ::std::result::Result<
        TorrentInjectionOptions,
        ::std::vec::Vec<::caesura_options::OptionRule>,
    > {
        self.resolve_internal(true)
    }
}
impl ::std::default::Default for TorrentInjectionOptions {
    fn default() -> Self {
        Self {
            copy_torrent_to: ::std::option::Option::None,
        }
    }
}
impl ::caesura_options::Documented for TorrentInjectionOptions {
    fn doc_metadata() -> &'static ::caesura_options::OptionsDoc {
        static DOC: ::std::sync::LazyLock<::caesura_options::OptionsDoc> = ::std::sync::LazyLock::new(||
        ::caesura_options::OptionsDoc {
            name: "TorrentInjectionOptions",
            description: "Options for injecting generated torrents into a torrent client.",
            fields: ::std::vec![
                ::caesura_options::FieldDoc { config_key : "copy_torrent_to", cli_flag :
                "--copy-torrent-to", field_type : "Option<PathBuf>", default_value :
                ::std::option::Option::None, default_doc : ::std::option::Option::None,
                description :
                "Directory the torrent file is copied to.<br>This should be set if you wish to auto-add to your torrent client.",
                }
            ],
        });
        &DOC
    }
}
const _: () = {
    fn __register(
        provider: &mut ::caesura_options::OptionsProvider,
        services: &mut ::di::ServiceCollection,
    ) {
        provider.register::<TorrentInjectionOptionsPartial>(services);
    }
    ::inventory::submit!(
        ::caesura_options::OptionsRegistration { doc_metadata : < TorrentInjectionOptions
        as ::caesura_options::Documented > ::doc_metadata, register : __register, }
    );
};
